--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@
 
  /* Dropdown Button */
  .dropbtn {
-    background-color: #04AA6D;
+    background-color:#39ad86;
     color: white;
-    padding: 16px;
+    padding: 17.3px;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -21,7 +21,7 @@
   
   /* Dropdown button on hover & focus */
   .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
+    background-color: #008080;
   }
   
   /* The search field */
