--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 #iconAttribution {
     position: absolute;
     bottom: 0%;
+    text-decoration: none;
+    color: rgb(124, 124, 124);
 }
 
 
@@ -10,7 +18,7 @@
 */
 
  /* Dropdown Button */
- .dropbtn {
+  .dropbtn {
     background-color:#39ad86;
     color: white;
     padding: 17.3px;
@@ -27,7 +35,7 @@
   /* The search field */
   #myInput {
     box-sizing: border-box;
-    background-image: url('searchicon.png');
+    background-image: url('../img/search.png');
     background-position: 14px 12px;
     background-repeat: no-repeat;
     font-size: 16px;
